--- a/Aula 01/index.html
+++ b/Aula 01/index.html
@@ -4,7 +4,8 @@
     <h1>Pedro Galindo <br> </h1>
     <h>Minhas Informações:
         Estudante de ciência da computação na <a href= "http://www.fei.edu.br" >FEI</a>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.6485563542624!2d-46.5793979!3d-23.724241199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4158ef9c7c05%3A0x776b798985695f52!2sFEI%20-%20Campus%20S%C3%A3o%20Bernardo%20do%20Campo!5e0!3m2!1spt-BR!2sbr!4v1755562453982!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.6485563542624!2d-46.5793979!3d-23.724241199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4158ef9c7c05%3A0x776b798985695f52!2sFEI%20-%20Campus%20S%C3%A3o%20Bernardo%20do%20Campo!5e0!3m2!1spt-BR!2sbr!4v1755562453982!5m2!1spt-BR!2sbr"
+         width="600" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </h>
     
     <meta charset="UTF-8">
@@ -17,24 +18,24 @@
 
    <ul> <li>Josh Allen</li> </ul>
 
-<img src="../Aula 01/imagens/allen.jpg" >
+<img src="../Aula 01/imagens/allen.jpg" /height="330" >
 
 
    <ul> <li>Malik Nabers</li> </ul>
 
-   <img src="../Aula 01/imagens/nabers.jpg" >
+   <img src="../Aula 01/imagens/nabers.jpg"/height="330" >
 
    <ul><li>Lamar Jackson</li></ul>
 
-<img src="../Aula 01/imagens/lamar.jpg" >
+<img src="../Aula 01/imagens/lamar.jpg"/height="330" >
 
    <ul><li>TJ Watt</li></ul>
 
-   <img src="../Aula 01/imagens/watt.jpg" >
+   <img src="../Aula 01/imagens/watt.jpg"/height="330" >
 
    <ul><li>Myles Garret</li></ul>
 
-<img src="../Aula 01/imagens/garret.jpg">
+<img src="../Aula 01/imagens/garret.jpg"/height="330">
 
 <p> <a href="https://www.youtube.com/">Youtube</a> Link do youtube:</p>
 
